--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,8 @@
     @include('./html/footer.html')
     
     @include('./html/modalForm.html')
-    @include('./html/modalPopup.html')
+
+    @include('./html/modalPoPup.html')
   
     <script src="js/main.js"></script>
   </body>
