--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
     
     @include('./html/modalForm.html')
 
-    @include('./html/modalPoPup.html')
+    @include('./html/modalPopPup.html')
   
     <script src="js/main.js"></script>
   </body>
