-Добавлена прокрутка модального окна в ландшафтной ориентации мобильных устройств -Для всех цветов  использованы CSS3-переменные -Удален  Wepback из проекта, оставлен только Gulp -Исправлены ошибки 404 на несуществующую статику -В класс со статичными методами ScrollDisplay вынесен  участок кода  с функционалом блокирования скролла - Внутри скрипта валидации  вызывается нужный валидатор - Скрипты  запускаются во входной точке после события domContentLoaded

--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -18,7 +18,12 @@
       <div class="footerLower__inner">
         <section class="footerLower__section footerLower__section_first">
           <a class="sectionTitleLink sectionTitleLink_main">
-            <img class="footerLogo" width="48" height="32" src="img/logo-light.svg" alt="логотип компании">
+            <svg class="footerLogo" width="48" height="32">
+
+              <use xlink:href="img/sprite.svg#logoLight "></use>
+          
+          </svg>
+
             <span>Afrianska</span>
           </a>
           <section class="sectionList">
