--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,10 +1,14 @@
 <header class="header">
   <nav class="navigation">
     <a href="#">
-      <img class="navigation__logo" width="48" height="32" src="img/logo-dark.svg" alt="логотип компании">
+      <svg class="navigation__logo" width="48" height="32">
+        <use xlink:href="img/sprite.svg#logoDark "></use>
+      </svg>
     </a>
     <button class="navigation__menuButton">
-      <img class="navigation__burger" width="24" height="16" src="img/burger.svg" alt="бургер меню">
+      <svg class="navigation__burger" width="24" height="16">
+        <use xlink:href="img/sprite.svg#burger "></use>
+      </svg>
     </button>
   </nav>
 </header>
