--- a/src/html/infoCard.html
+++ b/src/html/infoCard.html
@@ -7,10 +7,11 @@
       <h3 class="infoCard__title titleThird">@title</h3>
       <p class="infoCard__text">@text</p>
     </div>
-
-    <a class="infoCard__link" href="#"
-      ><span>Learn more</span>
-      <img class="arrowRight" width="16" height="16" src="img/arrow.svg" alt="ссылка на дополнительнцю информацию">
+    <a class="infoCard__link" href="#">
+      <span>Learn more</span>
+      <svg class="arrowRight" width="16" height="16">
+        <use xlink:href="img/sprite.svg#arrow "></use>
+      </svg>
     </a>
   </div>
 </div>
