--- a/src/html/popup.html
+++ b/src/html/popup.html
@@ -1,5 +1,6 @@
 <div class="popUp">
-  
   <p class="popup__message">Your message successfully sent</p>
-  <img class="popup__checkmark" src="img/verification-checkmark-symbol.svg" alt="подтверждение">
+  <svg class="popup__checkmark">
+    <use xlink:href="img/sprite.svg#verification-checkmark-symbol "></use>
+  </svg>
 </div>
