--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Afrianska</title>
+    <link rel="icon" href="img/favicon.ico" sizes="any">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
     <link rel="stylesheet" href="css/index.min.css" />
   </head>
   <body>
@@ -23,6 +25,6 @@
 
     @include('./html/modalPopUp.html')
   
-    <script src="js/main.js"></script>
+    <script  src="js/bundle.js"></script>
   </body>
 </html>
